--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,15 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     compile 'org.springframework.boot:spring-boot-starter-web'
-    compile group: 'com.h2database', name: 'h2', version: '1.4.197'
-    compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.0.0'
+    compile 'org.springframework.boot:spring-boot-devtools'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    compile 'com.h2database:h2:1.4.197'
+    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.0'
+    compile 'org.thymeleaf:thymeleaf-spring4:3.0.11.RELEASE'
+    compile 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.4.1'
+    compile 'org.webjars:jquery:3.3.1'
+    compile 'org.webjars:bootstrap:4.2.1'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.spockframework:spock-core:1.1-groovy-2.3"
+    testCompile 'org.spockframework:spock-core:1.1-groovy-2.3'
 }
