--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring.datasource.driverClassName: org.h2.Driver
 spring.datasource.username: sa
 spring.datasource.password:
 spring.h2.console.enabled: true
+
+spring.thymeleaf.cache: false
+spring.thymeleaf.mode: HTML
